v1.0.0/modules/schema/pages/class/InUseDate.adoc
= `InUseDate`
:toclevels: 4


+++Dates associated with asset 'in use' status. May have multiple in use dates for this device and a compound type allows a query to return multiple dates.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:InUseDate`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`InUseDate`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<inUseDate,`inUseDate`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date asset was most recently put in use.+++

| <<notReadyForUseDate,`notReadyForUseDate`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date of most recent asset transition to not ready for use state.+++

| <<readyForUseDate,`readyForUseDate`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date of most recent asset transition to ready for use state.+++
|===

'''


//[discrete]
[#inUseDate]
=== `inUseDate`
+++Date asset was most recently put in use.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:InUseDate.inUseDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#notReadyForUseDate]
=== `notReadyForUseDate`
+++Date of most recent asset transition to not ready for use state.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:InUseDate.notReadyForUseDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#readyForUseDate]
=== `readyForUseDate`
+++Date of most recent asset transition to ready for use state.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:InUseDate.readyForUseDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===


